--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@mui/x-data-grid": "^7.6.0",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
